--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dig-nat-tools",
+  "name": "@dignetwork/dig-nat-tools",
   "version": "1.0.0",
   "description": "Decentralized P2P file transfer with NAT traversal",
   "main": "dist/index.js",
