--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/yourusername/dig-nat-tools.git"
+    "url": "https://github.com/DIG-Network/dig-nat-tools"
   },
   "dependencies": {
     "debug": "^4.3.4",
