--- a/package.json
+++ b/package.json
@@ -11,34 +11,13 @@
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "prepublishOnly": "npm run clean && npm run build",
-    "test": "jest",
-    "test:ci": "cross-env SKIP_NETWORK_TESTS=true jest --no-watchman --forceExit --detectOpenHandles --testPathIgnorePatterns=test-utils.ts --testPathIgnorePatterns=types.d.ts --verbose",
-    "test:ci-safe": "cross-env SKIP_NETWORK_TESTS=true jest --no-watchman --forceExit --testMatch=\"**/network-manager-ci.test.ts\" --testTimeout=5000 --verbose",
-    "test:all-protocols-ci": "cross-env SKIP_NETWORK_TESTS=true jest --no-watchman --forceExit --detectOpenHandles \"protocols/.*\\.test\\.ts$\" --testTimeout=10000 --verbose",
-    "test:comprehensive-ci": "cross-env SKIP_NETWORK_TESTS=true jest --no-watchman --forceExit --detectOpenHandles \"**/*\\.(test|spec)\\.ts$\" --testTimeout=30000 --verbose",
-    "test:all-protocols-safe": "npm run test:tcp-safe && npm run test:udp-safe && npm run test:webrtc-safe && npm run test:gun-safe && npm run test:multi-safe",
-    "test:protocols-debug": "cross-env SKIP_NETWORK_TESTS=true NODE_ENV=test DEBUG=jest:* jest --no-watchman --forceExit --detectOpenHandles --maxWorkers=1 \"protocols/.*\\.test\\.ts$\" --testTimeout=10000 --verbose",
-    "test:protocols": "jest protocols",
-    "test:tcp": "jest protocols/tcp",
-    "test:udp": "jest protocols/udp",
-    "test:webrtc": "jest protocols/webrtc",
-    "test:gun": "jest protocols/gun",
-    "test:multi": "jest protocols/multi",
-    "test:tcp-safe": "cross-env SKIP_NETWORK_TESTS=true jest --no-watchman --forceExit --detectOpenHandles protocols/tcp --testTimeout=10000 --verbose",
-    "test:udp-safe": "cross-env SKIP_NETWORK_TESTS=true jest --no-watchman --forceExit --detectOpenHandles protocols/udp --testTimeout=10000 --verbose",
-    "test:webrtc-safe": "cross-env SKIP_NETWORK_TESTS=true jest --no-watchman --forceExit --detectOpenHandles protocols/webrtc --testTimeout=10000 --verbose",
-    "test:gun-safe": "cross-env SKIP_NETWORK_TESTS=true jest --no-watchman --forceExit --detectOpenHandles protocols/gun --testTimeout=10000 --verbose",
-    "test:multi-safe": "cross-env SKIP_NETWORK_TESTS=true jest --no-watchman --forceExit --detectOpenHandles protocols/multi --testTimeout=10000 --verbose",
-    "test:network-manager": "cross-env SKIP_NETWORK_TESTS=true TS_NODE_TRANSPILE_ONLY=true jest --detectOpenHandles --forceExit --verbose --no-watchman --testMatch=\"**/network-manager.test.ts\"",
-    "test:sequential": "node run-tests.js",
-    "test:safe": "cross-env SKIP_NETWORK_TESTS=true TS_NODE_TRANSPILE_ONLY=true jest --no-watchman --forceExit --detectOpenHandles --testMatch=\"**/network-manager.test.ts\" --testTimeout=10000 --verbose",
     "example": "ts-node src/examples/simple-example.ts",
     "example:host": "ts-node src/examples/host-example.ts",
     "example:client": "ts-node src/examples/client-example.ts",
     "example:multi-peer": "ts-node src/examples/multi-peer-client-example.ts",
     "example:ip-discovery": "ts-node src/examples/ip-discovery-example.ts",
-    "test:protocols-comprehensive": "cross-env SKIP_NETWORK_TESTS=true NODE_ENV=test jest --no-watchman --forceExit --detectOpenHandles --maxWorkers=1 \"protocols/.*\\.test\\.ts$\" --testTimeout=180000 --verbose",
-    "test:all-safe": "npm run test:ci-safe && npm run test:protocols-comprehensive",
+    "example:simple-host": "ts-node src/examples/simple-host-example.ts",
+    "example:simple-client": "ts-node src/examples/simple-client-example.ts",
     "prepare-release": "bash ./scripts/release.sh"
   },
   "keywords": [
@@ -72,16 +51,13 @@
     "@types/debug": "^4.1.8",
     "@types/fs-extra": "^11.0.2",
     "@types/ip": "^1.1.3",
-    "@types/jest": "^29.5.14",
     "@types/node": "^20.8.0",
     "@types/uuid": "^9.0.4",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "@typescript-eslint/parser": "^6.7.3",
     "cross-env": "^7.0.3",
     "eslint": "^8.50.0",
-    "jest": "^29.7.0",
     "rimraf": "^5.0.1",
-    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
