--- a/package.json
+++ b/package.json
@@ -40,16 +40,22 @@
     "url": "https://github.com/DIG-Network/dig-nat-tools"
   },
   "dependencies": {
+    "@noble/ed25519": "^2.2.3",
+    "@noble/hashes": "^1.7.1",
+    "@noble/secp256k1": "^2.2.3",
+    "@types/k-bucket": "^5.0.4",
     "chokidar": "^3.6.0",
     "debug": "^4.3.4",
     "fs-extra": "^11.3.0",
     "gun": "^0.2020.1239",
     "ip": "^1.1.9",
+    "k-bucket": "^5.1.0",
     "lodash.debounce": "^4.0.8",
     "lru-cache": "^11.0.2",
     "nat-upnp": "^1.1.1",
     "node-datachannel": "^0.5.2",
     "node-fetch": "^3.3.2",
+    "strong-soap": "^4.1.10",
     "stun": "^2.1.0",
     "uuid": "^9.0.0"
   },
@@ -60,7 +66,9 @@
     "@types/ip": "^1.1.3",
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20.8.0",
+    "@types/node-persist": "^3.1.8",
     "@types/uuid": "^9.0.4",
+    "@types/xml2js": "^0.4.14",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "@typescript-eslint/parser": "^6.7.3",
     "cross-env": "^7.0.3",
