--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@jest/globals": "^30.0.5",
     "@types/express": "^4.17.17",
+    "@types/gun": "^0.9.6",
     "@types/jest": "^29.5.14",
     "@types/nat-upnp": "^1.1.5",
     "@types/node": "^20.4.5",
@@ -37,6 +38,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "gun": "^0.2020.1241",
     "nat-upnp": "^1.1.1"
   }
 }
