--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@roamhq/wrtc": "^0.9.0",
     "express": "^4.18.2",
     "gun": "^0.2020.1241",
     "nat-upnp": "^1.1.1"
