--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
   },
   "dependencies": {
     "@roamhq/wrtc": "^0.9.0",
+    "@types/webtorrent": "^0.110.1",
     "express": "^4.18.2",
     "gun": "^0.2020.1241",
-    "nat-upnp": "^1.1.1"
+    "nat-upnp": "^1.1.1",
+    "webtorrent": "^2.8.4"
   }
 }
