--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "license": "MIT",
   "devDependencies": {
     "@jest/globals": "^30.0.5",
+    "@types/axios": "^0.9.36",
     "@types/express": "^4.17.17",
     "@types/gun": "^0.9.6",
     "@types/jest": "^29.5.14",
@@ -43,9 +44,11 @@
   "dependencies": {
     "@roamhq/wrtc": "^0.9.0",
     "@types/webtorrent": "^0.110.1",
+    "axios": "^1.11.0",
     "express": "^4.18.2",
     "gun": "^0.2020.1241",
     "nat-upnp": "^1.1.1",
+    "public-ip": "^7.0.1",
     "webtorrent": "^2.8.4"
   }
 }
