Initial install script for windows as a windows service
Signed-off-by: Robert Gogete <gogeterobert@yahoo.com>

--- a/dig-node/tsconfig.json
+++ b/dig-node/tsconfig.json
@@ -14,7 +14,8 @@
     "sourceMap": true,
     "removeComments": false,
     "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "types": ["node"]
   },
   "include": [
     "src/**/*"
