--- a/dig-node/package.json
+++ b/dig-node/package.json
@@ -24,13 +24,14 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "commander": "^11.1.0",
     "chalk": "^5.3.0",
-    "ora": "^7.0.1",
-    "chokidar": "^3.5.3"
+    "chokidar": "^3.5.3",
+    "commander": "^11.1.0",
+    "node-windows": "^1.0.0-beta.8",
+    "ora": "^7.0.1"
   },
   "devDependencies": {
-    "@types/node": "^20.8.0",
+    "@types/node": "^20.19.17",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
     "eslint": "^8.50.0",
