--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "dependencies": {
     "@roamhq/wrtc": "^0.9.0",
     "@types/webtorrent": "^0.110.1",
+    "bittorrent-tracker": "^11.2.2",
     "express": "^4.18.2",
     "gun": "^0.2020.1241",
     "nat-upnp": "^1.1.1",
